Fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ a {
 .center {
   margin: auto;
 }
+.image-center {
+  height:auto;
+  width:160px;
+  display: block;
+  margin: auto;
+}
 .center-text { 
   text-align: center;
 }
@@ -113,6 +119,33 @@ a {
   background-color: #fff;
   border-radius: 10px;
   background-image: url(../halikai.jpg);background-size: cover;
+  height:400px;
+  position: relative;
+  padding:0;
+}
+.burtsbees {
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  background-image: url(../burtsbees.jpg);background-size: cover;
+  height:400px;
+  position: relative;
+  padding:0;
+}
+.babybling {
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  background-image: url(../mauvebow.jpg);background-size: cover;
+  height:400px;
+  position: relative;
+  padding:0;
+}
+.sunglasses {
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  background-image: url(../sunglasses.jpg);background-size: cover;
   height:400px;
   position: relative;
   padding:0;
